# desktop-tauri-vue-boilerplate

./: .env.example  README.md  bun.lockb  latest.json  package.json
docs/: auto-startup.md  auto-update.md  command.md  context-menu.md  control-manager.md  custom-command.md  dev-dependencies.md  devtools.md  encript-store.md  fullscreen.md  index.md  logging.md  network-status.md  projec-structure.md  sqlite.md  store.md  systray.md  versioning.md
src/: App.vue  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  migrations.rs
src/layouts/settings/: SettingLayout.vue  Settings.ts
src/utils/: Database.ts  Logger.ts  SecretStore.ts  Store.ts  SystemTray.ts
